<resources>
    <string name="app_name">GosolinePayment</string>



    <!--~~~~~~~~~~~~~~~~~~登录~~~~~~~~~~~~~~~~~~~-->
    <string name="login_btn_text">Sign In</string>
    <string name="login_text_hint_username">Please enter the username</string>
    <string name="login_text_hint_password">Please input a password</string>

    <!-- ProgressDialog-->
    <string name="progress_dialog_title">Progress Dialog</string>
    <string name="progress_please_wait">Please wait…</string>

    <!--登录提示dialog-->
    <string name="dialog_login_title">您当前账号还未进行登录，请登录后再进行操作</string>
    <string name="cancel">取消</string>
    <string name="login">去登录</string>


    <string name="gasoline_payment">加油支付</string>
    <string name="search">搜索</string>
    <string name="my_order">我的订单</string>
    <string name="smart_add_gasoline">智慧加油</string>
    <string name="all_brand">全部品牌</string>
    <string name="nearest">距离最近</string>
    <string name="cheapest">价格最低</string>
    <string name="loading">加载中……</string>
    <string name="loading_data">正在获取数据……</string>
    <string name="refresh">刷新重试</string>
    <string name="no_net">网络不给力，获取数据失败</string>
    <string name="no_station_list">未找到相关加油站，尝试更改其他条件筛选</string>
    <string name="next_step">下一步</string>
    <string name="reselect_station">重选加油站</string>
    <string name="other_price">其他金额</string>
    <string name="order">立即下单</string>
    <string name="real_price">应付金额： </string>
    <string name="pay_price">支付金额：</string>
    <string name="discount_price">优惠金额： </string>
    <string name="pay_style">支付方式： </string>
    <string name="out_of_rang">当前加油金额超过最大油箱容量</string>
    <string name="warm_hint">温馨提示</string>
    <string name="continue_to_order">继续下单</string>
    <string name="order_has_closerd">订单已关闭</string>
    <string name="if_continue_add_gas">如需继续加油，请重新下单</string>
    <string name="please_reorder">请重新下单</string>
    <string name="reorder">重新下单</string>
    <string name="pay_succ">支付成功</string>
    <string name="okay">好的</string>
    <string name="overtime_cancel">超时订单将取消</string>
    <string name="order_again">再来一单</string>
    <string name="wait_pay">待支付</string>
    <string name="appling_draback">退款申请中</string>
    <string name="has_draback">已退款</string>
    <string name="_real_price">实付金额</string>
    <string name="_add_gas_price">加油金额</string>
    <string name="_cheaper_price">优惠金额</string>
    <string name="_gas_num">加油升数</string>
    <string name="no_order">暂无订单</string>
    <string name="search_gas_station">搜加油站</string>
    <string name="histoty_record">历史记录</string>
    <string name="sure">确认</string>
    <string name="search_destination">搜目的地</string>
    <string name="clear_hitory">清空历史记录</string>
    <string name="no_hitory">暂无历史记录</string>
    <string name="order_detail">订单详情</string>
    <string name="input_gas_num">请输入加油金额</string>
    <string name="near_gas_station">附近的加油站</string>
    <string name="_gas_station_offline">当前加油站已下线，</string>
    <string name="_select_other_station">请选择其他加油站进行下单</string>
    <string name="payment_gas_by_wechat">微信扫一扫，缴纳加油费</string>
    <string name="distance_warning">您当前位置距离该加油站较远，建议您到达加油站油枪位后再进行下单</string>
    <string name="customer_service">本次加油服务由车主邦提供，如遇到相关问题请致电客服  4000-835-999</string>
    <string name="order_explain">超时未付款说明：如超时该订单仍未进行付款、则订单自动取消，我的订单内已取消的订单不予以展示</string>



</resources>

