<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="68px"
        android:orientation="horizontal"
        android:paddingTop="7.5px"
        >
        <TextView
            android:id="@+id/tv_gas_num"
            android:layout_width="wrap_content"
            android:layout_height="68px"
            android:gravity="center"
            android:text="92#"
            android:textColor="#FFC8C8C8"
            android:textSize="28px"
            android:layout_marginLeft="39.5px"
            android:drawableRight="@mipmap/pull_down"
            android:drawablePadding="12.5px"
            />
        <View
            android:layout_width="1px"
            android:layout_height="22px"
            android:background="@color/_1AFFFFFF"
            android:layout_marginLeft="23.5px"
            android:layout_marginTop="20px"
            />
        <TextView
            android:id="@+id/tv_gas_branch"
            android:layout_width="wrap_content"
            android:layout_height="68px"
            android:gravity="center"
            android:text="@string/all_brand"
            android:textColor="#FFC8C8C8"
            android:textSize="28px"
            android:layout_marginLeft="54px"
            android:drawableRight="@mipmap/pull_down"
            android:drawablePadding="12.5px"
            />

        <View
            android:layout_width="1px"
            android:layout_height="22px"
            android:background="@color/_1AFFFFFF"
            android:layout_marginLeft="23.5px"
            android:layout_marginTop="20px"
            />

        <TextView
            android:id="@+id/tv_gas_nearest"
            android:layout_width="wrap_content"
            android:layout_height="68px"
            android:gravity="center"
            android:text="@string/nearest"
            android:textColor="@color/ffc8c8c8"
            android:textSize="28px"
            android:layout_marginLeft="52px"
            />

        <View
            android:layout_width="1px"
            android:layout_height="22px"
            android:background="@color/_1AFFFFFF"
            android:layout_marginLeft="29.5px"
            android:layout_marginTop="20px"
            />

        <TextView
            android:id="@+id/tv_gas_cheapest"
            android:layout_width="wrap_content"
            android:layout_height="68px"
            android:gravity="center"
            android:text="@string/cheapest"
            android:textColor="@color/ffc8c8c8"
            android:textSize="28px"
            android:layout_marginLeft="60px"
            />

        <View
            android:layout_width="1px"
            android:layout_height="22px"
            android:background="@color/_1AFFFFFF"
            android:layout_marginLeft="23.5px"
            android:layout_marginTop="20px"
            />
    </LinearLayout>

    <View
        android:id="@+id/view_smart_select_line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/_1AFFFFFF"
        android:visibility="invisible"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_gasStation_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="7.5px"
        android:visibility="gone"
        />
    <LinearLayout
        android:id="@+id/ll_no_datas_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_station_list"
            android:textColor="@color/ffc8c8c8"
            android:textSize="32px"
            android:drawableTop="@mipmap/no_station"
            android:drawablePadding="28px"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_loading_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:gravity="center"
        >
        <ProgressBar
            android:layout_width="80px"
            android:layout_height="80px"
            android:indeterminateBehavior="repeat"
            android:indeterminateDrawable="@drawable/loading_anim"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textColor="@color/ffc8c8c8"
            android:textSize="32px"
            android:layout_marginTop="28px"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_no_net_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_net"
            android:textColor="@color/ffc8c8c8"
            android:textSize="32px"/>
        <Button
            android:id="@+id/btn_refresh"
            android:layout_width="200px"
            android:layout_height="60px"
            android:background="@drawable/background_refresh_button"
            android:layout_marginTop="40px"
            android:text="@string/refresh"
            android:textColor="@color/color_text_white"
            android:textSize="32px"
            />
    </LinearLayout>


</LinearLayout>