<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_my_order_item_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <TextView
        android:id="@+id/tv_my_order_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="中国石油中油首汽四号加油站"
        android:textColor="@color/color_text_white"
        android:textSize="32px"
        android:layout_marginTop="28px"
        android:layout_marginLeft="39px"
        />
    <TextView
        android:id="@+id/tv_my_order_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="今日  17:53:30"
        android:textColor="@color/ffc8c8c8"
        android:textSize="28px"
        android:layout_below="@+id/tv_my_order_name"
        android:layout_marginTop="16px"
        android:layout_marginLeft="39px"
        />
    <LinearLayout
        android:id="@+id/ll_my_order_time_remaining_parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/tv_my_order_time"
        android:layout_marginTop="16px"
        android:layout_marginLeft="39px"
        >
        <TextView
            android:id="@+id/tv_my_order_time_remaining"
            android:layout_width="249px"
            android:layout_height="50px"
            android:background="@drawable/background_my_order_time_remaining"
            android:gravity="center"
            android:text="剩余时间：29分30秒"
            android:textColor="@color/color_positive"
            android:textSize="24px"
            android:visibility="gone"
            />
        <TextView
            android:id="@+id/tv_my_order_cancel_over_time"
            android:layout_width="198px"
            android:layout_height="50px"
            android:background="@drawable/background_my_order_time_remaining"
            android:gravity="center"
            android:text="@string/overtime_cancel"
            android:textColor="@color/color_positive"
            android:textSize="24px"
            android:layout_marginLeft="10px"
            android:visibility="gone"
            />
        <Button
            android:id="@+id/btn_my_order_again"
            android:layout_width="118px"
            android:layout_height="50px"
            android:background="@drawable/background_green_button"
            android:gravity="center"
            android:text="@string/order_again"
            android:textColor="@color/color_text_white"
            android:textSize="24px"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/tv_my_order_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="¥150.00"
        android:textColor="@color/color_text_white"
        android:textSize="36px"
        android:layout_alignParentRight="true"
        android:layout_marginTop="28px"
        android:layout_marginRight="40px"
        />
    <TextView
        android:id="@+id/tv_my_order_wait_pay"
        android:layout_width="140px"
        android:layout_height="58px"
        android:gravity="center"
        android:text="@string/wait_pay"
        android:textColor="#FFFFFFFF"
        android:textSize="32px"
        android:background="@drawable/background_refresh_button"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tv_my_order_price"
        android:layout_marginTop="44px"
        android:layout_marginRight="40px"
        android:visibility="gone"
        />
    <TextView
        android:id="@+id/tv_my_order_appling_drawback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appling_draback"
        android:textColor="@color/FFF25D52"
        android:textSize="28px"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tv_my_order_price"
        android:layout_marginTop="16px"
        android:layout_marginRight="40px"
        android:visibility="gone"
        />
    <TextView
        android:id="@+id/tv_my_order_has_drawback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/has_draback"
        android:textColor="@color/ffc8c8c8"
        android:textSize="28px"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tv_my_order_price"
        android:layout_marginTop="16px"
        android:layout_marginRight="40px"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/_1AFFFFFF"
        android:layout_below="@+id/ll_my_order_time_remaining_parent"
        android:layout_marginTop="28px"
        />
</RelativeLayout>