<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    >
    <RelativeLayout
        android:id="@+id/ll_left_parent"
        android:layout_width="330px"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/background_color_gradient"
        >
        <TextView
            android:id="@+id/ll_title"
            android:layout_width="wrap_content"
            android:layout_height="99px"
            android:gravity="center_vertical"
            android:layout_marginLeft="42px"
            android:text="@string/gasoline_payment"
            android:textColor="#FFC8C8C8"
            android:textSize="32px"
            />
        <LinearLayout
            android:id="@+id/ll_smart_add_sagoline"
            android:layout_width="match_parent"
            android:layout_height="99px"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_below="@+id/ll_title"
            >
            <ImageView
                android:id="@+id/iv_smart_add_sag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/left_smart_add_gas_selected"
                android:layout_marginLeft="42px"
                />
            <TextView
                android:id="@+id/tv_smart_add_gas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/smart_add_gasoline"
                android:textColor="@color/color_text_white"
                android:textSize="32px"
                android:layout_marginLeft="33px"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_my_order"
            android:layout_width="match_parent"
            android:layout_height="99px"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_below="@+id/ll_smart_add_sagoline"
            >
            <ImageView
                android:id="@+id/iv_my_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/left_order"
                android:layout_marginLeft="42px"
                />
            <TextView
                android:id="@+id/tv_my_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_order"
                android:textColor="@color/color_text_white"
                android:textSize="32px"
                android:layout_marginLeft="33px"
                />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer_service"
            android:textColor="@color/ffc8c8c8"
            android:textSize="16px"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="24px"
            android:drawableLeft="@mipmap/gas_logo_big"
            android:drawablePadding="6px"
            android:layout_marginLeft="8px"
            android:layout_marginRight="7px"
            />

    </RelativeLayout>

    <com.autoai.gaspayment.widget.NoScrollViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="99px"
        android:layout_toRightOf="@+id/ll_left_parent"
        android:background="@drawable/background_color_gradient_dark"
        />

</RelativeLayout>